--- a/src/main/resources/templates/registro-Restaurante.html
+++ b/src/main/resources/templates/registro-Restaurante.html
@@ -63,7 +63,9 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login" th:href="@{/login}">Iniciar Sesión</a>
+                    <a class="nav-link" href="/login" th:href="@{/login}">
+                        <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contacto" th:href="@{/contacto}">Contacto</a>
